--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "express-handlebars": "^4.0.4",
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^2.3.0",
-    "timeago.js": "^4.0.2",
-    "twilio": "^3.44.0"
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
